--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@google/genai": "^1.12.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+ "dependencies": {
+  ...
+  "@tailwindcss/typography": "^0.5.9",
+  ...
+},
+  
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
