--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "gallacenter-ai-advisor",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "description": "AI-powered advisor for Gallacenter vehicle maintenance and repair recommendations",
+  "author": "Desco Team",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "format": "prettier --write .",
+    "preview": "vite preview",
+    "test": "echo \"No test specified\" && exit 0"
   },
- "dependencies": {
-  ...
-  "@tailwindcss/typography": "^0.5.9",
-  ...
-},
-  
+  "dependencies": {
+    "@google/genai": "^1.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -28,6 +32,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "prettier": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
